feat(refactor): completed refactoring for the training pipeline and model specification